--- a/src/app/job-list/job-list.component.html
+++ b/src/app/job-list/job-list.component.html
@@ -13,7 +13,7 @@
         *ngFor="let job of filteredJobs">
 
         <div class="card-image">
-            <img src="../../assets/images/faceit.svg"
+            <img src="assets/images/faceit.svg"
                  alt="company logo">
         </div>
 
