--- a/src/app/job-list/job-list.component.scss
+++ b/src/app/job-list/job-list.component.scss
@@ -1,4 +1,4 @@
-ul {
+.job-cards {
     margin: 60px 0px;
 }
 
@@ -84,7 +84,24 @@ ul {
 }
 
 .filter {
-    text-align: center;
+    position: relative;
+    top: -15px;
+    background-color: #fff;
+
+    max-width: 1000px;
+    display: flex;
+    margin:auto;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.03), 
+    0 2px 4px rgba(0,0,0,0.04), 
+    0 4px 8px rgba(0,0,0,0.04), 
+    0 8px 10px rgba(0,0,0,0.04),
+    0 12px 40px rgba(0,0,0,0.04);
+    
+    padding: 1.5rem;
+    
+    height: 50px;
+   
+    align-items: center;
 }
 
 .tag {
