--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@ $dark-gray: hsl(180, 14%, 20%);
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1 rem = 10px  (10/16 = 62.5)
+  overflow-y: scroll;
 }
 
 body {
