--- a/src/app/job-list/job-list.component.html
+++ b/src/app/job-list/job-list.component.html
@@ -1,4 +1,5 @@
-<ul class="filter">
+<ul class="filter"
+    [ngStyle]="{'visibility': selectedToolTags.size == 0? 'hidden' : 'visible' }">
     <li>
         <button class="tag tool-tag"
                 *ngFor="let tag of selectedToolTags"
