--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,15 @@
 header {
     background-color:hsl(180, 29%, 50%); 
     height: 100px;
+    display: flex;
+
+    img {
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 3.5rem;
+        right: 5rem;
+        cursor: pointer;
+    }
 }
 
