--- a/src/app/job-list/job-list.component.scss
+++ b/src/app/job-list/job-list.component.scss
@@ -14,14 +14,6 @@
     }
 }
 
-.tag {
-    cursor:pointer;
-    &:hover, &:focus {
-        opacity: 0.8!important;
-        transition: all 0.3;
-    }
-}
-
 .card {
     // background-color: $light-gray;
     background-color:#ffffff;
@@ -57,14 +49,24 @@
     .title-section {
         display: flex;
 
-        >.tag {
+        .featured-tag, .new-tag {
             border-radius: 2rem;
             padding: 0px 12px;
             text-transform: uppercase;
             font-size: 12px;
             color: #fff;
             line-height: 0;
+            border: none;
+            font-weight: 700;
+            margin-left: 1.5rem;
+            cursor: pointer;
+
+            &:hover, &:focus {
+                opacity: 0.8!important;
+                transition: all 0.3;
+            }
         }
+        
         .featured-tag {
             background-color:  hsl(180, 14%, 20%);
 
@@ -81,40 +83,6 @@
     margin-left: auto;
     display: flex;
     align-items: center;
-}
-
-.filter {
-    position: relative;
-    top: -15px;
-    background-color: #fff;
-
-    max-width: 1000px;
-    display: flex;
-    margin:auto;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.03), 
-    0 2px 4px rgba(0,0,0,0.04), 
-    0 4px 8px rgba(0,0,0,0.04), 
-    0 8px 10px rgba(0,0,0,0.04),
-    0 12px 40px rgba(0,0,0,0.04);
-    
-    padding: 1.5rem;
-    
-    height: 50px;
-   
-    align-items: center;
-    visibility: hidden;
-}
-
-.tag {
-    border: none;
-    font-weight: 700;
-    margin-left: 1.5rem;
-}
-
-.tool-tag {
-    background-color: hsl(180, 52%, 96%);
-    color: hsl(180, 29%, 50%);
-    padding: 0.5rem 0.75rem;
 }
 
 
