added clear filter and fixed tag styles

--- a/src/app/job-filter/job-filter.component.html
+++ b/src/app/job-filter/job-filter.component.html
@@ -7,5 +7,7 @@
                           [name]=tag>
             </app-tool-tag>
         </ng-container>
+
     </li>
+    <li (click)="onClearFilter()">Clear</li>
 </ul>
