--- a/src/app/job-filter/job-filter.component.scss
+++ b/src/app/job-filter/job-filter.component.scss
@@ -1,22 +1,27 @@
 .filter {
     position: relative;
     top: -15px;
-    background-color: #fff;
-
+    height: 50px;
     max-width: 1000px;
-    display: flex;
+    padding: 1.5rem;
+    background-color: #fff;
     margin:auto;
+
+    display: flex;
+
     box-shadow: 0 1px 2px rgba(0,0,0,0.03), 
     0 2px 4px rgba(0,0,0,0.04), 
     0 4px 8px rgba(0,0,0,0.04), 
     0 8px 10px rgba(0,0,0,0.04),
     0 12px 40px rgba(0,0,0,0.04);
     
-    padding: 1.5rem;
-    
-    height: 50px;
-   
-    align-items: center;
     visibility: hidden;
+}
+
+li:last-child {
+    border: none;
+    margin-left: auto;
+    padding-right: 1.5rem;
+    cursor: pointer;
 }
 
