--- a/src/app/shared/tool-tag/tool-tag.component.html
+++ b/src/app/shared/tool-tag/tool-tag.component.html
@@ -1,4 +1,4 @@
-<button class="tag tool-tag"
+<button class="{{ currentClass }}"
         (click)=onButtonClick(name)>{{ name }}
     <span>x</span>
 </button>
