--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,35 @@
 <header>
-    <img src="assets/images/user.png"
-         alt="user account icon">
+       <div (click)="dialogLogin.showModal()">
+              <img src="assets/images/user.png"
+                   alt="user account icon" />
+       </div>
+       <dialog #dialogLogin>
 
-    <form [formGroup]="registerForm">
-        <label>Email address</label>
-        <input type="email"
-               formControlName="email"
-               class="form-control">
-        <label>Password</label>
-        <input type="password"
-               class="form-control"
-               formControlName="password">
-        <button type="submit"
-                (click)="onSubmit(registerForm.value)"
-                class="btn btn-default">Login</button>
-    </form>
+              <form [formGroup]="registerForm">
+                     <h2>Create an account</h2>
+                     <br>
+                     <a (click)="dialogLogin.close()">X</a>
+                     <label>Email address</label>
+                     <input type="email"
+                            formControlName="email"
+                            class="form-control" />
+                     <label>Password</label>
+                     <input type="password"
+                            class="form-control"
+                            formControlName="password" />
+                     <div class="submit">
+                            <button type="submit"
+                                    (click)="registerUser(registerForm.value)">
+                                   Register
+                            </button>
+                            <hr>
+                            <button type="submit"
+                                    (click)="loginUser(registerForm.value)">
+                                   Login
+                            </button>
+                            <br><br>
+                            <p>test@test.com - 123456</p>
+                     </div>
+              </form>
+       </dialog>
 </header>
