--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -13,3 +13,58 @@ header {
     }
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    padding: 6rem 10rem;
+    font-weight: 400;
+
+    input {
+        padding: 1rem;
+        margin: 0.5rem 0 3rem 0;
+    }
+    
+    button {
+        padding: 1rem 3rem;
+        margin-top: 2rem;
+        
+        border-radius: 2rem;
+        width: 100%;
+        align-content: center;
+        &:last-child {
+            margin-bottom: 15rem;
+        }
+    }
+
+    hr {
+        margin-top: 2rem;
+    }
+}
+
+a {
+    position: fixed;
+    top: 5px;
+    right: 10px;
+    font-weight: 700;
+}
+
+dialog {
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    border: none;
+    border-radius: 0.3rem;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.03), 
+    0 2px 4px rgba(0,0,0,0.03), 
+    0 4px 8px rgba(0,0,0,0.03), 
+    0 8px 10px rgba(0,0,0,0.03),
+    0 12px 20px rgba(0,0,0,0.03);
+}
+
+dialog::backdrop {
+    background-color: rgba(0,0,0,0.3);
+    backdrop-filter: blur(1px);
+}
+
+
+
