--- a/src/app/job-filter/job-filter.component.scss
+++ b/src/app/job-filter/job-filter.component.scss
@@ -3,19 +3,18 @@
     top: -15px;
     height: 50px;
     max-width: 1000px;
-    padding: 1.5rem;
     background-color: #fff;
     margin:auto;
-
     display: flex;
-
     box-shadow: 0 1px 2px rgba(0,0,0,0.03), 
     0 2px 4px rgba(0,0,0,0.04), 
     0 4px 8px rgba(0,0,0,0.04), 
     0 8px 10px rgba(0,0,0,0.04),
     0 12px 40px rgba(0,0,0,0.04);
-    
-    visibility: hidden;
+}
+
+ul {
+    align-items: center;
 }
 
 li:last-child {
