--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,21 @@ body {
 //   background-repeat: no-repeat;
 }
 
+dialog::backdrop {
+  background: rgba(0,0,0,0.6);
+  backdrop-filter: blur(3px);
+}
+
 ul {
-    list-style: none;
+  list-style: none;
+}
+
+button, a {
+  cursor: pointer;
+  border: none;
+
+  &:hover, &:focus {
+    opacity: 0.8!important;
+    transition: all 0.3;
+  }
 }
