extract job-card component and add rxjs

--- a/src/app/job-list/job-list.component.html
+++ b/src/app/job-list/job-list.component.html
@@ -5,14 +5,16 @@
 
 <ul class="job-cards">
 
-    <li class="card"
-        *ngFor="let job of filteredJobs">
+    <li>
+        <ng-container *ngFor="let job of filteredJobs">
+            <app-job-card [job]=job></app-job-card>
+        </ng-container>
+    </li>
 
-        <div class="card-image">
+    <!-- <div class="card-image">
             <img src="assets/images/faceit.svg"
                  alt="company logo">
         </div>
-
         <div class="card-main">
             <div class="title-section">
                 <h4 class="job-company">{{ job.company }}</h4>
@@ -31,13 +33,7 @@
             <h3 class="job-position"
                 (click)="openJobDetail(job)">{{ job.position }}</h3>
             <h5 class="job-others">{{ job.postedAt }}&emsp;·&emsp;{{ job.contract }}&emsp;·&emsp;{{ job.location }}</h5>
-        </div>
+        </div> -->
 
-        <div class="tool-tags-section">
-            <ng-container *ngFor="let tag of job.tools">
-                <app-tool-tag (click)=addTool(tag)
-                              [name]=tag></app-tool-tag>
-            </ng-container>
-        </div>
     </li>
 </ul>
