--- a/src/app/job-filter/job-filter.component.scss
+++ b/src/app/job-filter/job-filter.component.scss
@@ -6,6 +6,7 @@
     background-color: #fff;
     margin:auto;
     display: flex;
+    padding: 1.5rem 1.5rem;
     box-shadow: 0 1px 2px rgba(0,0,0,0.03), 
     0 2px 4px rgba(0,0,0,0.04), 
     0 4px 8px rgba(0,0,0,0.04), 
