--- a/src/app/job-card/job-card.component.html
+++ b/src/app/job-card/job-card.component.html
@@ -9,12 +9,12 @@
             <h4 class="job-company">{{ job.company }}</h4>
 
             <app-tool-tag *ngIf=job.new
-                          (click)=addTool(newTag)
-                          [name]="newTag">
+                          (buttonClicked)=onAddTool(newTag)
+                          [name]=newTag>
             </app-tool-tag>
 
             <ng-container *ngIf=job.featured>
-                <app-tool-tag (click)=addTool(featuredTag)
+                <app-tool-tag (buttonClicked)=onAddTool(featuredTag)
                               [name]=featuredTag>
                 </app-tool-tag>
             </ng-container>
@@ -26,7 +26,7 @@
 
     <div class="tool-tags-section">
         <ng-container *ngFor="let tag of job.tools">
-            <app-tool-tag (click)=addTool(tag)
+            <app-tool-tag (buttonClicked)=onAddTool(tag)
                           [name]=tag></app-tool-tag>
         </ng-container>
     </div>
