--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,11 +9,11 @@
                      <h2>Create an account</h2>
                      <br>
                      <a (click)="dialogLogin.close()">X</a>
-                     <label>Email address</label>
+                     <label for="email">Email address</label>
                      <input type="email"
                             formControlName="email"
                             class="form-control" />
-                     <label>Password</label>
+                     <label for="password">Password</label>
                      <input type="password"
                             class="form-control"
                             formControlName="password" />
