--- a/src/app/job-card/job-card.component.html
+++ b/src/app/job-card/job-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card animate-face-in">
     <div class="card-image">
         <img src="assets/images/faceit.svg"
              alt="company logo">
