--- a/src/app/shared/tool-tag/tool-tag.component.html
+++ b/src/app/shared/tool-tag/tool-tag.component.html
@@ -1,4 +1,3 @@
-<button class="{{ currentClass }}"
-        (click)=onButtonClick(name)>{{ name }}
+<button class="{{ currentClass }}">{{ name }}
     <span>x</span>
 </button>
