--- a/src/app/job-filter/job-filter.component.html
+++ b/src/app/job-filter/job-filter.component.html
@@ -1,12 +1,9 @@
 <ul class="filter">
-    <li>
-        <ng-container *ngFor="let tag of selectedTags$ | async">
-            <app-tool-tag class="tag tool-tag animate"
-                          (click)=onRemoveTag(tag)
-                          [name]=tag>
-            </app-tool-tag>
-        </ng-container>
-
+    <li *ngFor="let tag of selectedTags">
+        <app-tool-tag class="tag tool-tag animate"
+                      (click)=onRemoveTag(tag)
+                      [name]=tag>
+        </app-tool-tag>
     </li>
     <li (click)="onClearFilter()">Clear</li>
 </ul>
