--- a/src/app/job-list/job-list.component.html
+++ b/src/app/job-list/job-list.component.html
@@ -1,12 +1,10 @@
 <div class="jobs-listing animate-face-in">
-    <app-job-filter [ngStyle]="{'visibility': (selectedTags$ | async)?.length === 0? 'hidden' : 'visible' }"
-                    (updateFilter)="filterUpdatedHandler()">
+    <app-job-filter [ngStyle]="{'visibility': selectedTags?.length === 0? 'hidden' : 'visible' }">
     </app-job-filter>
 
     <ul class="job-cards">
         <li *ngFor="let job of filteredJobs">
-            <app-job-card (updateFilter)=filterUpdatedHandler()
-                          [job]=job>
+            <app-job-card [job]=job>
             </app-job-card>
         </li>
     </ul>
