--- a/src/app/job-details/job-details.component.html
+++ b/src/app/job-details/job-details.component.html
@@ -1,1 +1,3 @@
-<p>{{ currentJob?.position }}</p>
+<p>{{ currentJob?.position }} - id: {{currentJob?.id}}</p>
+
+<app-job-card [job]=currentJob></app-job-card>
