--- a/src/app/job-list/job-list.component.html
+++ b/src/app/job-list/job-list.component.html
@@ -1,4 +1,4 @@
-<div class="jobs-listing animate-face-in">
+<div class="jobs-listing">
     <app-job-filter [ngStyle]="{'visibility': selectedTags?.length === 0? 'hidden' : 'visible' }">
     </app-job-filter>
 
