--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,5 @@
 header {
-    background-color:hsl(180, 29%, 50%); 
+    font-size: 18px;
     height: 100px;
     display: flex;
 
@@ -13,7 +13,7 @@ header {
     }
 }
 
-form {
+.dialog-form {
     display: flex;
     flex-direction: column;
     padding: 6rem 10rem;
@@ -21,27 +21,73 @@ form {
 
     input {
         padding: 1rem;
-        margin: 0.5rem 0 3rem 0;
+        width: 100%;
+        border: 1px solid var(--color-grey-dark);
+        outline: none;
     }
     
-    button {
-        padding: 1rem 3rem;
-        margin-top: 2rem;
-        
-        border-radius: 2rem;
-        width: 100%;
-        align-content: center;
-        &:last-child {
-            margin-bottom: 15rem;
+    input[type=password]:focus,
+    input[type=email]:focus {
+       border: 1px solid var(--color-primary-dark);
+    }
+
+    .submit {
+        button {
+            padding: 1rem 3rem;
+            margin-top: 5rem;
+            border-radius: 2rem;
+            width: 100%;
+            align-content: center;
+            font-size: 15px;
+            letter-spacing: 1px;
+            background-color: var(--color-primary-dark);
+            color: #eee;
+            outline: none;
+    
+            &:hover, &:focus {
+                opacity: 0.9;
+                transition: opacity 400ms;
+            }
         }
     }
 
-    hr {
-        margin-top: 2rem;
+    h2  {
+        margin-top: 30px;
+        margin-bottom: 50px;
+    }
+
+    p {
+        text-align: center;
+        margin-bottom: 60px;
+        
+        >a {
+            font-weight: 700;
+            color: var(--color-primary-dark);
+            font-style: none;
+
+            &:hover {
+                opacity: 0.9;
+                transition: opacity 400ms;
+            }
+        }
     }
 }
 
-a {
+label:last-of-type {
+    padding-top: 25px;
+    display:inline-block;
+}
+
+
+
+.validation-error {
+    color: crimson;
+    font-size: 15px;
+    margin: 5px 0 0;
+    height: 15px;
+}
+
+.close-dialog {
     position: fixed;
     top: 5px;
     right: 10px;
@@ -59,6 +105,7 @@ dialog {
     0 4px 8px rgba(0,0,0,0.03), 
     0 8px 10px rgba(0,0,0,0.03),
     0 12px 20px rgba(0,0,0,0.03);
+    width: 450px;
 }
 
 dialog::backdrop {
