--- a/src/app/shared/tool-tag/tool-tag.component.scss
+++ b/src/app/shared/tool-tag/tool-tag.component.scss
@@ -2,11 +2,6 @@
 .tag {
     font-weight: 700;
     margin-left: 1.5rem;
-
-    &:hover, &:focus {
-        opacity: 0.8!important;
-        transition: all 0.3;
-    }
 }
 
 .featured-tag, .new-tag {
@@ -15,6 +10,11 @@
     text-transform: uppercase;
     font-size: 12px;
     color: #fff;
+    
+    &:hover, &:focus {
+        opacity: 0.8;
+        transition: all 0.3;
+    }
 }
 
 .featured-tag {
@@ -26,7 +26,15 @@
 }
 
 .tool-tag {
+    border-radius: 0.3rem;
     background-color: hsl(180, 52%, 96%);
     color: hsl(180, 29%, 50%);
-    padding: 0.5rem 0.75rem;
+    padding: 0.6rem 1rem;
+    font-size: 14px;
+
+    &:hover, &:focus {
+        // opacity: 0.8!important;
+        background-color: var(--color-primary);
+        color: #eee;
+    }
 }
