--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,29 @@
-//colors
-$primary-color: hsl(180, 29%, 50%);
-$background-color: hsl(180, 52%, 96%);
+:root {
+  --color-primary: hsl(180, 29%, 50%);
+  --color-background: hsl(180, 90%, 92%);
+  --color-background-1: hsl(180, 52%, 96%);
+  --color-grey-light: hsl(180, 31%, 95%);
+  --color-grey-medium: hsl(180, 8%, 52%);
+  --color-grey-dark: hsl(180, 14%, 20%);
+  --color-primary-dark: hsl(180, 29%, 30%);
+  // --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+  // --shadow-light: 0 2rem 5rem rgba(0,0,0,.6);
+  // --line: 1px solid var(--color-grey-light-2); 
+}
 
-$light-gray: hsl(180, 31%, 95%);
-$medium-gray: hsl(180, 8%, 52%);
-$dark-gray: hsl(180, 14%, 20%);
+* {
+  margin: 0;
+  padding: 0; 
+}
 
-//base
 *,
 *::after,
 *::before {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
+  box-sizing: inherit; 
+}
+
+a {
+  text-decoration: none;
 }
 
 html {
@@ -28,10 +39,7 @@ body {
   font-weight: 700;
   line-height: 1.7;
   font-size: 1.6rem;
-
-  background-color: $background-color;
-  //   background-size: cover;
-  //   background-repeat: no-repeat;
+  background-image: linear-gradient(to right bottom,  #eee, var(--color-background));
 }
 
 dialog::backdrop {
@@ -47,34 +55,22 @@ button,
 a {
   cursor: pointer;
   border: none;
-
-  &:hover,
-  &:focus {
-    opacity: 0.8 !important;
-    transition: all 0.3;
-  }
 }
 
-// .animate-fade-in {
-//   animation-duration: 0.5s;
-//   animation-name: animate-pop;
-//   animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
-// }
+.animate {
+  animation-duration: 0.4s;
+  animation-name: animate-pop;
+  animation-timing-function: ease-in;
+}
 
-// .animate {
-//   animation-duration: 0.5s;
-//   animation-name: animate-pop;
-//   animation-timing-function: ease-in;
-// }
+@keyframes animate-pop {
+  0% {
+    opacity: 0;
+    transform: scale(0.8, 0.8);
+  }
 
-// @keyframes animate-pop {
-//   0% {
-//     opacity: 0;
-//     transform: scale(0.8, 0.8);
-//   }
-
-//   100% {
-//     opacity: 1;
-//     transform: scale(1, 1);
-//   }
-// }
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
+}
