--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 :root {
   --color-primary: hsl(180, 29%, 50%);
+  --color-primary-medium: hsl(180, 45%, 37%);
   --color-background: hsl(180, 90%, 92%);
-  --color-background-1: hsl(180, 52%, 96%);
   --color-grey-light: hsl(180, 31%, 95%);
   --color-grey-medium: hsl(180, 8%, 52%);
   --color-grey-dark: hsl(180, 14%, 20%);
