--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
 
                      <!-- close -->
                      <span><a class="close-dialog"
-                               (click)="closeForm">X</a>
+                               (click)="closeForm()">X</a>
                      </span>
 
                      <!-- email -->
