--- a/src/app/job-filter/job-filter.component.scss
+++ b/src/app/job-filter/job-filter.component.scss
@@ -26,7 +26,7 @@
     
         &:hover, &:focus {
           opacity: 0.8!important;
-          transition: all 0.3;
+          transition: opacity 0.3;
         }
       }
     } 
