responsive, login errors and folder structure

--- a/src/app/components/job-list/job-list.component.html
+++ b/src/app/components/job-list/job-list.component.html
@@ -1,5 +1,5 @@
 <div class="jobs-listing">
-    <app-job-filter [ngStyle]="{'visibility': selectedTags?.length === 0? 'hidden' : 'visible' }">
+    <app-job-filter [ngStyle]="{'visibility': selectedTags.length === 0? 'hidden' : 'visible' }">
     </app-job-filter>
 
     <ul class="job-cards">
