--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,13 +3,23 @@ header {
     height: 100px;
     display: flex;
 
-    img {
-        width: 30px;
-        height: 30px;
-        position: absolute;
-        top: 3.5rem;
-        right: 5rem;
-        cursor: pointer;
+    .account-icon {
+        margin-left: auto;
+        padding: 2.5rem 2.5rem 0 2.5rem;
+
+        img {
+            width: 35px;
+            height: 35px;
+        }
+
+        h2 {
+            
+        }
+
+        button {
+            background-color: transparent;
+            font-weight: 700;
+        }
     }
 }
 
@@ -18,6 +28,13 @@ header {
     flex-direction: column;
     padding: 6rem 10rem;
     font-weight: 400;
+
+    @media only screen and (max-width: 500px) {
+        padding: 4rem 6rem;
+    } 
+    @media only screen and (max-width: 400px) {
+        padding: 2rem 3rem;
+    } 
 
     input {
         padding: 1rem;
@@ -31,26 +48,40 @@ header {
        border: 1px solid var(--color-primary-dark);
     }
 
-    .submit {
-        button {
-            padding: 1.3rem 3rem;
-            margin-top: 5rem;
-            border-radius: 2rem;
-            width: 100%;
-            align-content: center;
-            font-size: 15px;
-            letter-spacing: 1px;
+   
+    .form-button {
+        padding: 1.3rem 3rem;
+        margin-top: 5rem;
+        border-radius: 2rem;
+        width: 100%;
+        align-content: center;
+        font-size: 15px;
+        letter-spacing: 1px;
+        background-color: var(--color-grey-dark);
+        // background-color: var(--color-primary-dark);
+        color: #eee;
+        outline: none;
+
+        &:hover, &:focus {
             background-color: var(--color-primary-dark);
-            color: #eee;
-            outline: none;
-    
-            &:hover, &:focus {
-                background-color: var(--color-primary-medium);
-                transition: all 400ms;                
-            }
+            // background-color: var(--color-primary);
+            transition: all 400ms;                
+        }
+        &:disabled {
+            cursor: not-allowed;
         }
     }
+    
+    img {
+        display: block;
+        height: 80px;
+        margin: 50px auto 75px;
+    }
 
+    h1 {
+        margin-top: 30px;
+    }
+    
     h2  {
         margin-top: 30px;
         margin-bottom: 50px;
@@ -97,8 +128,6 @@ label:last-of-type {
     height: 15px;
 }
 
-
-
 dialog {
     top: 50%;
     left: 50%;
@@ -111,6 +140,13 @@ dialog {
     0 8px 10px rgba(0,0,0,0.03),
     0 12px 20px rgba(0,0,0,0.03);
     width: 450px;
+    height: 700px;
+
+    @media only screen and (max-width: 500px) {
+        min-width: 0;
+        height: 660px;
+    } 
+
 }
 
 dialog::backdrop {
