--- a/src/app/components/shared/tool-tag/tool-tag.component.scss
+++ b/src/app/components/shared/tool-tag/tool-tag.component.scss
@@ -1,7 +1,6 @@
 
 .tag {
     font-weight: 700;
-    margin-left: 1.5rem;
 }
 
 .featured-tag, .new-tag {
@@ -32,9 +31,16 @@
     padding: 0.6rem 1rem;
     font-size: 14px;
 
+    // @media only screen and (max-width: 650px) {
+    //     margin-left: 0;
+    //     margin-right: 1.5rem;
+    // }
+
+
     &:hover, &:focus {
         // opacity: 0.8!important;
         background-color: var(--color-primary);
         color: #eee;
     }
 }
+
